--- a/docs/脚手架与业务目录的目录结构浅析.md
+++ b/docs/脚手架与业务目录的目录结构浅析.md
@@ -1,3 +1,5 @@
+[issue](https://api.github.com/repos/hoperyy/front-end-engineering/issues/8)
+
 # 脚手架与业务目录的目录结构浅析
 
 ## 嵌套结构
@@ -95,3 +97,11 @@ src/
 +   [纠结的链接：ln、ln -s、fs.symlink、require](http://taobaofed.org/blog/2016/07/29/puzzled-by-link/)
 +   [github issue: Don't resolve symlinks when requiring](https://github.com/nodejs/node/issues/3402)
 +   [github: sync-directory](https://github.com/hoperyy/sync-directory)
+    
+    
+    
+    
+
+
+
+
