--- a/docs/脚手架与业务目录的目录结构浅析.md
+++ b/docs/脚手架与业务目录的目录结构浅析.md
@@ -1,4 +1,4 @@
-[issue](https://api.github.com/repos/hoperyy/front-end-engineering/issues/8)
+[issue](https://github.com/hoperyy/front-end-engineering/issues/8)
 
 # 脚手架与业务目录的目录结构浅析
 
