--- a/docs/项目个性化配置策略.md
+++ b/docs/项目个性化配置策略.md
@@ -1,4 +1,4 @@
-[issue](https://api.github.com/repos/hoperyy/front-end-engineering/issues/11)
+[issue](https://github.com/hoperyy/front-end-engineering/issues/11)
 
 一般来说，脚手架和项目目录是父子关系，如果脚手架和业务代码分离，脚手架不参与业务逻辑，专注于打包等功能，自然是极好的。但这时会引入另一个问题：如果一个脚手架对接多个业务，如何满足业务的多样化需求？
 
